Env variables example update

--- a/.env.cep47.example
+++ b/.env.cep47.example
@@ -12,6 +12,11 @@ TOKEN_SYMBOL=MY
 TOKEN_META=1 one,2 two
 INSTALL_PAYMENT_AMOUNT=115000000000
 
+NFT_ID=0
+NFT_NAME=name
+NFT_DESCRIPTION=description
+NFT_ASSET=http://localhost:8080
+
 MINT_ONE_PAYMENT_AMOUNT=2000000000
 MINT_COPIES_PAYMENT_AMOUNT=100000000000
 BURN_ONE_PAYMENT_AMOUNT=12000000000
